--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -1,36 +1,29 @@
-name: Docker Build and Push
+name: ci
 
 on:
   push:
     branches:
-      - main
+      - 'main'
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Set Version from package.json
-        id: set_version
-        run: echo ::set-output name=VERSION::$(node -p "require('./nodejsApp/package.json').version")
-
-      - name: Login to Docker Hub
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and Push to DockerHub
-        run: |
-          docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-app:${{ steps.set_version.outputs.VERSION }} ./nodejsApp
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-app:${{ steps.set_version.outputs.VERSION }}
-        env:
-          DOCKER_CLI_AGGREGATE: 1
-          DOCKER_BUILDKIT: 1
+      -
+        name: Build and push
+        run: docker build -t serhatd/nodejsApp:$(date +%s) ./nodejsApp && docker push serhatd/nodejsApp:$(date +%s)
