--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -1,4 +1,4 @@
-name: ci
+name: ci-cd
 
 on:
   push:
@@ -18,13 +18,11 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       -
         name: Read Version from package.json
         run: echo "PACKAGE_VERSION=$(jq -r .version ./nodejsApp/package.json)" >> $GITHUB_ENV
         shell: bash
         working-directory: ./
-
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -34,3 +32,8 @@ jobs:
       -
         name: Build and push
         run: docker build -t serhatd/nodejsapp:${{ env.PACKAGE_VERSION }} ./nodejsApp && docker push serhatd/nodejsapp:${{ env.PACKAGE_VERSION }}
+      -
+        name: Deploy to Kubernetes
+        run: kubectl apply -f deployment.yaml
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }} 
