--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -4,16 +4,8 @@ metadata:
   name: nodejs-ingress
   namespace: test
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    cert-manager.io/cluster-issuer: letsencrypt-staging
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  tls:
-  - hosts:
-    - nodejsapp.tekirdag.life
-    secretName: letsencrypt-staging
   rules:
   - host: nodejsapp.tekirdag.life
     http:
@@ -25,3 +17,7 @@ spec:
             name: nodejs-service
             port:
               number: 80
+  tls:
+  - hosts:
+    - nodejsapp.tekirdag.life
+    secretName: nodejsapp-tekirdag-life-tls
