--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 jobs:
-  docker:
+  docker-build-push-and-kubectl-apply:
     runs-on: ubuntu-latest
     steps:
       -
@@ -34,6 +34,8 @@ jobs:
         run: docker build -t serhatd/nodejsapp:${{ env.PACKAGE_VERSION }} ./nodejsApp && docker push serhatd/nodejsapp:${{ env.PACKAGE_VERSION }}
       -
         name: Deploy to Kubernetes
-        run: kubectl apply -f deployment.yaml
+        run: |
+          echo "$KUBE_CONFIG_DATA" > kubeconfig.yaml
+          kubectl apply -f ./nodejsApp/deployment.yaml --kubeconfig=kubeconfig.yaml
         env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }} 
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
